# promptomatix

./: README.md  install.sh  pyproject.toml  setup.py
src/promptomatix/: main.py
src/promptomatix/cli/: parser.py
src/promptomatix/core/: config.py  optimizer.py
